Replace synchronized blocks with ReentrantLock throughout; adopt virtual threads
All worker and job pools now use Thread.ofVirtual() via VirtualThreadExecutorService
(replaces WorkerThreadPoolExecutor / WorkerThreadFactory / JobThreadFactory).
allowCoreThreadTimeOut(true) prevents pooling so each task gets a fresh virtual thread.

synchronized methods across CacheFacadeImpl, ContextJavaUtil (EntityRecordLock,
ArtifactBinInfo), EntityDbMeta, EntityFacadeImpl, EntityFacadeImpl (statementExecutor),
ExecutionContextFactoryImpl (compileGroovy, webappInfo), GroovyScriptRunner, MCache,
MCacheManager, MEntry, MNode, ResourceFacadeImpl, ScheduledJobRunner, ScreenFacadeImpl,
ScreenTestImpl, TransactionFacadeImpl, and ElasticRequestLogFilter are replaced with
ReentrantLock to prevent carrier-thread pinning under virtual threads.

Thread.start(...) / new Thread(...).start() replaced with Thread.ofVirtual().name(...).start()
where applicable (XslFoTransform, RequireNewTx, EcfiReInit, ScreenTestRender).

Adds VirtualThreadMoquiSuite and VirtualThreadStressTests.